packages/next-swc/crates/core/tests/errors/styled-jsx/no-child/output.js
import _JSXStyle from "styled-jsx/style";
export default (()=><div >

    <style jsx>

    </style>

  </div>
);
